test/link/script-unterminated-string.out
error: script-unterminated-string.link(2): Unterminated string
error: script-unterminated-string.link(4): Unterminated string
error: script-unterminated-string.link(5): Unterminated string
Linking failed with 3 errors
